--- a/test.ipynb
+++ b/test.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.6.10-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python361064bitb2dcdc4b6ec545fa988743b2677efc4a",
-   "display_name": "Python 3.6.10 64-bit"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -30,7 +7,9 @@
    "outputs": [],
    "source": [
     "from plotly import graph_objects as go\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"svg\""
    ]
   },
   {
@@ -1003,5 +982,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.6.10-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python361064bitb2dcdc4b6ec545fa988743b2677efc4a",
+   "display_name": "Python 3.6.10 64-bit"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
